# personal-development-app

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SPEC.md  agent.md
backend/: pyproject.toml  system_prompt.txt
backend/tests/: conftest.py  test_api.py  test_archive_store.py  test_audio_gateway.py  test_auto_interrupt_service.py  test_card_index.py  test_companion_orchestrator.py  test_companion_timing.py  test_config.py  test_dialog_client.py  test_dialog_runtime.py  test_document_progress.py  test_document_reader.py  test_document_reading_store.py  test_document_store.py  test_file_ingest.py  test_formal_continuation_probe.py  test_formal_stream_probe.py  test_health.py  test_identity_linker.py  test_interrupt_policy.py  test_live_diagnostics_store.py  test_live_heartbeat.py  test_live_heartbeat_main.py  test_live_silence_gate.py  test_memory_compaction.py  test_minimax_probe.py  test_personal_development.py  test_personal_development_minimax_robustness.py  test_personal_development_validation_tool.py  test_player_profiles.py  test_realtime_bridge.py  test_rule_analysis_service.py  test_rule_analysis_store.py  test_session_manager.py  test_session_manager_identity_link.py  test_siliconflow_preview_probe.py  test_skill_agent.py  test_speaker_alias_rewrite_service.py  test_speaker_identity_probe.py  (+14 more)
backend/tools/: check_env.ps1  check_schemas.py  personal_development_validation.py  probe_llm_stream.py  probe_quick_test.py  probe_regex_test.py  probe_rule_analysis.py  probe_toolchain.py  probe_web_search.py  replay_voice_file.py
(+174 files in other folders)
